--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-  "start": "node ./server.js",
+  "server": "node ./server.js",
+  "start": "npm run server",
   "dev": "concurrently \"react-scripts start\" \"node ./server.js\"",
   "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject",
-  "server:static": "json-server --watch ./db.json --port 8080",
-  "server": "node ./server.js"
+  "server:static": "json-server --watch ./db.json --port 8080"
   },
   "eslintConfig": {
     "extends": "react-app"
